--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-docs": "^6.0.0-beta.8",
     "@storybook/addon-storysource": "^5.3.18",
+    "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/react": "^5.3.18",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
@@ -66,10 +67,13 @@
     "@types/react": "^16.9.12",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
+    "css-loader": "^3.4.2",
     "fork-ts-checker-webpack-plugin": "^4.1.4",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
@@ -81,6 +85,7 @@
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.3",
     "stylelint": "^13.3.3",
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.4",
@@ -92,7 +97,12 @@
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/storybook-deployer": "^2.8.6",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "antd": "^3.25.0",
+    "babel-plugin-import": "^1.13.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
