--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-dev-component",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
@@ -12,7 +12,7 @@
     "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
+    "dev": "start-storybook -p 6006",
     "storybook:export": "build-storybook",
     "publish": "npm publish",
     "pubploy": "yarn deploy-storybook  && yarn publish",
