--- a/package.json
+++ b/package.json
@@ -97,8 +97,12 @@
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/storybook-deployer": "^2.8.6",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "antd": "^3.25.0",
+    "antd": "^4.2.4",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
+    "react-router-dom": "^5.2.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.1"
   },
