--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-dev-component",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
@@ -12,7 +12,7 @@
     "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "start-storybook -p 6006",
+    "dev": "start-storybook -s ./src 6006",
     "storybook:export": "build-storybook",
     "publish": "npm publish",
     "pubploy": "yarn deploy-storybook  && yarn publish",
@@ -57,7 +57,7 @@
     "@babel/core": "^7.9.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@storybook/addon-docs": "^6.0.0-beta.8",
+    "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/react": "^5.3.18",
@@ -94,14 +94,19 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/storybook-deployer": "^2.8.6",
+    "@storybook/theming": "^5.3.18",
+    "@types/storybook__addon-knobs": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "antd": "^4.2.4",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-module-resolver": "^4.0.0",
     "classnames": "^2.2.6",
-    "lodash": "^4.17.15",
+    "react-docgen-typescript-loader": "^3.7.2",
     "react-router-dom": "^5.2.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.1"
