--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "declarationDir": "build",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
+    ],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
@@ -12,7 +17,10 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+    ".storybook/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
