--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "start-storybook -s ./src 6006",
+    "dev": "start-storybook -p 6006 -s src",
     "storybook:export": "build-storybook",
     "publish": "npm publish",
-    "pubploy": "yarn deploy-storybook  && yarn publish",
+    "pubploy": "yarn deploy-storybook  && yarn publish ;exit 0",
     "generate": "node ./util/create-component",
     "prettier": "prettier --write src/**/*.{js,tsx,scss}",
     "prettier:check": "prettier --list-different src/**/*.{ts,tsx,scss}",
