fixed build error with ant design

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
   "scripts": {
     "deploy-storybook": "storybook-to-ghpages",
+    "watch": "rollup --config rollup.config.js --watch",
     "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
