--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "stylelint-scss"
   ],
   "rules": {
+    "selector-class-pattern": null,
     "block-no-empty": null,
     "scss/at-import-partial-extension-blacklist": null,
     "unit-whitelist": [
