--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prettier": "prettier --write src/**/*.{js,tsx,scss}",
     "prettier:check": "prettier --list-different src/**/*.{ts,tsx,scss}",
     "stylelint:check": "stylelint '**/*.scss' ;exit 0",
-    "stylelint": "stylelint '**/*.scss' --syntax scss --fix ;exit 0",
+    "stylelint": "npx stylelint '**/*.scss' --syntax scss --fix ;exit 0",
     "tslint": "tslint -p tsconfig.json",
     "tslint-fix": "tslint --fix -p tsconfig.json",
     "lint": "npm run prettier && npm run stylelint:check && npm run tslint && npm run tslint-fix && npm run test"
@@ -58,7 +58,10 @@
     "@babel/core": "^7.9.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-info": "^5.3.18",
+    "@storybook/addon-notes": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/react": "^5.3.18",
@@ -86,6 +89,8 @@
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass-loader": "^8.0.0",
+    "storybook-addon-jsx": "^7.2.3",
+    "storybook-dark-mode": "^0.6.1",
     "style-loader": "^1.1.3",
     "stylelint": "^13.3.3",
     "ts-jest": "^25.4.0",
@@ -95,9 +100,11 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/storybook-deployer": "^2.8.6",
@@ -107,8 +114,14 @@
     "antd": "^4.2.4",
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
+    "dev": "^0.1.3",
+    "markdown-loader": "^5.1.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-router-dom": "^5.2.0",
+    "react-storybook-addon-props-combinations": "^1.1.0",
+    "storybook-addon-paddings": "^2.0.2",
+    "storybook-addon-responsive-views": "^2.3.0",
+    "storybook-readme": "^5.0.8",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.1"
   },
