--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "stylelint": "npx stylelint '**/*.scss' --syntax scss --fix ;exit 0",
     "tslint": "tslint -p tsconfig.json",
     "tslint-fix": "tslint --fix -p tsconfig.json",
-    "lint": "npm run prettier && npm run stylelint:check && npm run tslint && npm run tslint-fix && npm run test"
+    "lint": "npm run prettier && npm run stylelint:check && npm run tslint && npm run tslint-fix"
   },
   "husky": {
     "hooks": {
@@ -42,7 +42,8 @@
     "Rollup",
     "Typescript",
     "Sass",
-    "Storybook"
+    "Storybook",
+    "Ant design"
   ],
   "author": "next-dev-component",
   "license": "ISC",
@@ -54,7 +55,34 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
+  "dependencies": {
+    "react": "^16.13.1",
+    "antd": "^4.2.4",
+    "classnames": "^2.2.6",
+    "typescript": "^3.7.2"
+  },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
+    "markdown-loader": "^5.1.0",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-router-dom": "^5.2.0",
+    "react-storybook-addon-props-combinations": "^1.1.0",
+    "storybook-addon-paddings": "^2.0.2",
+    "storybook-addon-responsive-views": "^2.3.0",
+    "storybook-readme": "^5.0.8",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-scss": "^3.17.1",
+    "@sambego/storybook-styles": "^1.0.0",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-viewport": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/storybook-deployer": "^2.8.6",
+    "@storybook/theming": "^5.3.18",
+    "@types/storybook__addon-knobs": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@babel/core": "^7.9.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
@@ -80,7 +108,6 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "rollup": "^1.27.4",
@@ -96,34 +123,7 @@
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.2"
-  },
-  "dependencies": {
-    "@sambego/storybook-styles": "^1.0.0",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addon-viewport": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/storybook-deployer": "^2.8.6",
-    "@storybook/theming": "^5.3.18",
-    "@types/storybook__addon-knobs": "^5.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "antd": "^4.2.4",
-    "babel-plugin-import": "^1.13.0",
-    "classnames": "^2.2.6",
-    "dev": "^0.1.3",
-    "markdown-loader": "^5.1.0",
-    "react-docgen-typescript-loader": "^3.7.2",
-    "react-router-dom": "^5.2.0",
-    "react-storybook-addon-props-combinations": "^1.1.0",
-    "storybook-addon-paddings": "^2.0.2",
-    "storybook-addon-responsive-views": "^2.3.0",
-    "storybook-readme": "^5.0.8",
-    "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-scss": "^3.17.1"
+    "tslint-config-prettier": "^1.18.0"
   },
   "publishConfig": {
     "access": "public"
