--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,22 @@
 save-exact=true
+
+package.json
+README
+CHANGES / CHANGELOG / HISTORY
+LICENSE / LICENCE
+NOTICE
+.git
+CVS
+.svn
+.hg
+.lock-wscript
+.wafpickle-N
+.*.swp
+.DS_Store
+._*
+npm-debug.log
+.npmrc
+node_modules
+config.gypi
+*.orig
+package-lock.jso
