--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "next-dev-component",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "main": "build/index.js",
   "module": "build/index.esm.js",
+  "scss": "build/index.css",
   "files": [
+    "tokens/**/*",
+    "**/*.{scss,d.ts,js.map,svg,png,woff,woff2}",
+    ".stylelintrc.js",
     "build"
   ],
   "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
   "scripts": {
     "deploy-storybook": "storybook-to-ghpages",
     "watch": "rollup --config rollup.config.js --watch",
-    "build": "rollup -c",
+    "build": "rimraf build && cross-env NODE_ENV=production rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "start-storybook -p 6006 -s src",
@@ -56,9 +60,20 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
+    "@beyonk/rollup-plugin-html-esm": "^1.0.3",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-html": "^0.2.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@types/classnames": "^2.2.10",
     "antd": "^4.2.4",
     "classnames": "^2.2.6",
+    "dev": "^0.1.3",
     "react": "^16.13.1",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-scss": "^2.5.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^6.0.1",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
@@ -126,5 +141,17 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
