--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "es6",
       "dom",
       "es2016",
-      "es2017"
+      "es2017",
+      "dom",
+      "dom.iterable"
     ],
     "sourceMap": true,
     "jsx": "react",
@@ -16,6 +18,12 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "noEmit": true
   },
   "include": [
     "src/**/*",
