--- a/package.json
+++ b/package.json
@@ -1,44 +1,7 @@
 {
   "name": "next-dev-component",
   "version": "1.0.13",
-  "main": "build/index.js",
-  "module": "build/index.esm.js",
-  "scss": "build/index.css",
-  "files": [
-    "tokens/**/*",
-    "**/*.{scss,d.ts,js.map,svg,png,woff,woff2}",
-    ".stylelintrc.js",
-    "build"
-  ],
   "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
-  "scripts": {
-    "deploy-storybook": "storybook-to-ghpages",
-    "watch": "rollup --config rollup.config.js --watch",
-    "build": "rimraf build && cross-env NODE_ENV=production rollup -c",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "dev": "start-storybook -p 6006 -s src",
-    "storybook:export": "build-storybook",
-    "publish": "npm publish",
-    "pubploy": "yarn deploy-storybook  && yarn publish ;exit 0",
-    "generate": "node ./util/create-component",
-    "prettier": "prettier --write src/**/*.{js,tsx,scss}",
-    "prettier:check": "prettier --list-different src/**/*.{ts,tsx,scss}",
-    "stylelint:check": "stylelint '**/*.scss' ;exit 0",
-    "stylelint": "npx stylelint '**/*.scss' --syntax scss --fix ;exit 0",
-    "tslint": "tslint -p tsconfig.json",
-    "tslint-fix": "tslint --fix -p tsconfig.json",
-    "lint": "npm run prettier && npm run stylelint:check && npm run tslint && npm run tslint-fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rimsila/next-dev-component.git"
-  },
   "keywords": [
     "React",
     "Component",
@@ -49,37 +12,74 @@
     "Storybook",
     "Ant design"
   ],
-  "author": "next-dev-component",
-  "license": "ISC",
+  "homepage": "https://github.com/rimsila/next-dev-component#readme",
   "bugs": {
     "url": "https://github.com/rimsila/next-dev-component/issues"
   },
-  "homepage": "https://github.com/rimsila/next-dev-component#readme",
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rimsila/next-dev-component.git"
+  },
+  "license": "ISC",
+  "author": "next-dev-component",
+  "main": "build/index.js",
+  "module": "build/index.esm.js",
+  "files": [
+    "tokens/**/*",
+    "**/*.{scss,d.ts,js.map,svg,png,woff,woff2}",
+    ".stylelintrc.js",
+    "build"
+  ],
+  "scripts": {
+    "build": "rimraf build && cross-env NODE_ENV=production rollup -c",
+    "deploy-storybook": "storybook-to-ghpages",
+    "dev": "start-storybook -p 6006 -s src",
+    "generate": "node ./util/create-component",
+    "lint": "npm run prettier && npm run stylelint:check && npm run tslint && npm run tslint-fix",
+    "prettier": "prettier --write src/**/*.{js,tsx,scss}",
+    "prettier:check": "prettier --list-different src/**/*.{ts,tsx,scss}",
+    "publish": "npm publish",
+    "pubploy": "yarn deploy-storybook  && yarn publish ;exit 0",
+    "sort": "npx sort-package-json",
+    "storybook:export": "build-storybook",
+    "stylelint": "npx stylelint '**/*.scss' --syntax scss --fix ;exit 0",
+    "stylelint:check": "stylelint '**/*.scss' ;exit 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "tslint": "tslint -p tsconfig.json",
+    "tslint-fix": "tslint --fix -p tsconfig.json",
+    "watch": "rollup --config rollup.config.js --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
-    "@beyonk/rollup-plugin-html-esm": "^1.0.3",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-html": "^0.2.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@types/classnames": "^2.2.10",
     "antd": "^4.2.4",
     "classnames": "^2.2.6",
-    "dev": "^0.1.3",
-    "react": "^16.13.1",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-scss": "^2.5.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^6.0.1",
-    "typescript": "^3.7.2"
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@beyonk/rollup-plugin-html-esm": "^1.0.3",
+    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.2",
     "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-actions": "^5.3.18",
@@ -98,6 +98,7 @@
     "@storybook/theming": "^5.3.18",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.24",
     "@types/react": "^16.9.12",
     "@types/storybook__addon-knobs": "^5.2.1",
@@ -121,8 +122,13 @@
     "react-storybook-addon-props-combinations": "^1.1.0",
     "rollup": "^1.27.4",
     "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-scss": "^2.5.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^6.0.1",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass-loader": "^8.0.0",
     "storybook-addon-jsx": "^7.2.3",
@@ -137,21 +143,15 @@
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.2"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "publishConfig": {
     "access": "public"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "main_css": "build/index.css"
 }
