--- a/package.json
+++ b/package.json
@@ -68,80 +68,56 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@storybook/preset-ant-design": "^0.0.1",
+    "@storybook/source-loader": "^5.3.19",
     "antd": "^4.2.4",
+    "autoprefixer": "^9.8.0",
+    "babel-preset-react-app": "^9.1.2",
     "classnames": "^2.2.6",
-    "react": "^16.13.1"
+    "colors": "^1.4.0",
+    "d": "^1.0.1",
+    "less-vars-to-js": "^1.3.0",
+    "postcss": "^7.0.30",
+    "react": "^16.13.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@beyonk/rollup-plugin-html-esm": "^1.0.3",
-    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
-    "@sambego/storybook-styles": "^1.0.0",
-    "@storybook/addon-a11y": "^5.3.18",
-    "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-info": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addon-notes": "^5.3.18",
-    "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
-    "@storybook/preset-ant-design": "^0.0.1",
-    "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.18",
     "@storybook/storybook-deployer": "^2.8.6",
     "@storybook/theming": "^5.3.18",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
     "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.0.24",
     "@types/react": "^16.9.12",
-    "@types/storybook__addon-knobs": "^5.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
-    "babel-preset-react-app": "^9.1.2",
-    "css-loader": "^3.4.2",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
     "husky": "^4.2.5",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "lint-staged": "^10.2.2",
-    "markdown-loader": "^5.1.0",
     "prettier": "^2.0.5",
-    "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
-    "react-storybook-addon-props-combinations": "^1.1.0",
     "rollup": "^1.27.4",
-    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-scss": "^2.5.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^6.0.1",
     "rollup-plugin-typescript2": "^0.27.0",
-    "sass-loader": "^8.0.0",
     "storybook-addon-jsx": "^7.2.3",
     "storybook-addon-paddings": "^2.0.2",
-    "storybook-addon-responsive-views": "^2.3.0",
-    "storybook-dark-mode": "^0.6.1",
     "storybook-readme": "^5.0.8",
-    "style-loader": "^1.1.3",
     "stylelint": "^13.3.3",
-    "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-scss": "^3.17.1",
     "ts-jest": "^25.4.0",
-    "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2"
