--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
   },
   "license": "ISC",
   "author": "next-dev-component",
-  "main": "build/index.js",
-  "module": "build/index.esm.js",
+  "main": "build",
   "files": [
-    "tokens/**/*",
-    "**/*.{scss,d.ts,js.map,svg,png,woff,woff2}",
-    ".stylelintrc.js",
     "build"
   ],
   "scripts": {
@@ -79,9 +75,13 @@
     "colors": "^1.4.0",
     "d": "^1.0.1",
     "less-vars-to-js": "^1.3.0",
+    "path": "^0.12.7",
     "postcss": "^7.0.30",
     "react": "^16.13.1",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-sass": "^1.2.2",
     "sass-loader": "^8.0.2",
     "stylelint-config-sass-guidelines": "^7.0.0"
   },
