--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "license": "ISC",
   "author": "next-dev-component",
-  "main": "build",
+  "main": "dist",
+  "main_css": "dist/index.css",
   "files": [
-    "build"
+    "dist"
   ],
   "scripts": {
-    "build": "rimraf build && cross-env NODE_ENV=production rollup -c",
+    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
     "deploy-storybook": "storybook-to-ghpages",
     "dev": "start-storybook -p 6006 -s src",
     "generate": "node ./util/create-component",
@@ -129,6 +130,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "main_css": "build/index.css"
+  }
 }
