--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,23 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "declarationDir": "dist",
-    "outDir": "../dist/",
+    "declarationDir": "lib",
     "module": "esnext",
-    "target": "es6",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017",
-      "dom",
-      "dom.iterable"
-    ],
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "noImplicitAny": false,
-    "typeRoots": [
-      "../typings",
-      "../node_modules/@types"
-  ]
+    "esModuleInterop": true
   },
-  "include": [
-    "src/**/*",
-    ".storybook/**/*", "index.ts",
-    "index.d.ts", 
-  ],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
+    "lib",
     "src/**/*.stories.tsx",
-    "src/**/*.test.tsx"
+    "src/**/*.test.tsx",
+    "src/util/**/*",
+    "src/layout/**/*"
   ]
 }
