--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lib"
   ],
   "scripts": {
-    "build": "rimraf lib && cross-env NODE_ENV=production rollup -c",
+    "build": "(rimraf lib && cross-env set NODE_ENV=production) & rollup -c",
     "deploy-storybook": "storybook-to-ghpages",
     "dev": "start-storybook -p 6006 -s src",
     "generate": "node ./util/create-component",
@@ -67,15 +67,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@rollup/plugin-multi-entry": "^3.0.1",
     "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/source-loader": "^5.3.19",
     "antd": "^4.2.5",
     "autoprefixer": "^9.8.0",
+    "babel-plugin-react-require": "^3.1.3",
     "babel-preset-react-app": "^9.1.2",
     "classnames": "^2.2.6",
     "colors": "^1.4.0",
+    "cross-env": "^7.0.2",
     "d": "^1.0.1",
     "less-vars-to-js": "^1.3.0",
     "path": "^0.12.7",
