updated config and add more card

--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
     "path": "^0.12.7",
     "postcss": "^7.0.30",
     "react": "^16.13.1",
+    "react-icons": "^3.10.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-multi-input": "^1.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-sass": "^1.2.2",
     "sass-loader": "^8.0.2",
