--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,8 @@
   "exclude": [
     "node_modules",
     "lib",
-    "src/**/*.stories.tsx",
+    "src/**/*.stories.(tsx|md)",
     "src/**/*.test.tsx",
-    "src/util/**/*",
     "src/layout/**/*"
   ]
 }
