--- a/package.json
+++ b/package.json
@@ -66,35 +66,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@rollup/plugin-multi-entry": "^3.0.1",
-    "@storybook/preset-ant-design": "^0.0.1",
-    "@storybook/source-loader": "^5.3.19",
     "antd": "^4.2.5",
-    "autoprefixer": "^9.8.0",
-    "babel-plugin-react-require": "^3.1.3",
-    "babel-preset-react-app": "^9.1.2",
     "classnames": "^2.2.6",
-    "colors": "^1.4.0",
-    "cross-env": "^7.0.2",
-    "d": "^1.0.1",
-    "less-vars-to-js": "^1.3.0",
-    "path": "^0.12.7",
-    "postcss": "^7.0.30",
     "react": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-multi-input": "^1.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-typescript-path-mapping": "^1.0.2",
-    "sass-loader": "^8.0.2",
-    "stylelint-config-sass-guidelines": "^7.0.0"
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
@@ -102,30 +81,46 @@
     "@storybook/addon-info": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
+    "@storybook/preset-ant-design": "^0.0.1",
     "@storybook/react": "^5.3.18",
+    "@storybook/source-loader": "^5.3.19",
     "@storybook/storybook-deployer": "^2.8.6",
     "@storybook/theming": "^5.3.18",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.12",
+    "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-react-require": "^3.1.3",
+    "babel-preset-react-app": "^9.1.2",
+    "colors": "^1.4.0",
+    "cross-env": "^7.0.2",
+    "d": "^1.0.1",
     "husky": "^4.2.5",
     "jest": "^24.9.0",
+    "less-vars-to-js": "^1.3.0",
+    "path": "^0.12.7",
+    "postcss": "^7.0.30",
     "prettier": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "rollup": "^1.27.4",
-    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-scss": "^2.5.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^6.0.1",
     "rollup-plugin-typescript2": "^0.27.0",
+    "sass-loader": "^8.0.2",
     "storybook-addon-jsx": "^7.2.3",
     "storybook-addon-paddings": "^2.0.2",
     "storybook-readme": "^5.0.8",
     "stylelint": "^13.3.3",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "ts-jest": "^25.4.0",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
