--- a/package.json
+++ b/package.json
@@ -66,10 +66,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@types/google-maps-react": "^2.0.5",
+    "@types/recompose": "^0.30.7",
     "antd": "^4.2.5",
     "classnames": "^2.2.6",
+    "google-maps-react": "^2.0.6",
+    "next": "^9.4.4",
     "react": "^16.13.1",
-    "react-icons": "^3.10.0"
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^3.10.0",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
