--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-dev-component",
-  "version": "1.0.33",
+  "version": "1.0.34",
   "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
   "keywords": [
     "React",
@@ -67,11 +67,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@types/google-maps-react": "^2.0.5",
+    "@types/nprogress": "^0.2.0",
     "@types/recompose": "^0.30.7",
     "antd": "^4.2.5",
     "classnames": "^2.2.6",
     "google-maps-react": "^2.0.6",
     "next": "^9.4.4",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
