--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-dev-component",
-  "version": "1.0.35",
+  "version": "1.0.36",
   "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
   "keywords": [
     "React",
@@ -67,6 +67,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@types/google-maps-react": "^2.0.5",
+    "@types/react-responsive": "^8.0.2",
     "@types/recompose": "^0.30.7",
     "antd": "^4.2.5",
     "classnames": "^2.2.6",
@@ -75,6 +76,7 @@
     "react": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
+    "react-responsive": "^8.1.0",
     "recompose": "^0.30.0"
   },
   "devDependencies": {
