--- a/package.json
+++ b/package.json
@@ -65,22 +65,14 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
-    "@types/google-maps-react": "^2.0.5",
-    "@types/react-responsive": "^8.0.2",
-    "@types/recompose": "^0.30.7",
-    "antd": "^4.2.5",
+    "antd": "^4.6.1",
     "classnames": "^2.2.6",
-    "faker": "^4.1.0",
     "google-maps-react": "^2.0.6",
-    "next": "^9.4.4",
     "react": "^16.13.1",
-    "react-google-maps": "^9.4.5",
-    "react-icons": "^3.10.0",
-    "react-responsive": "^8.1.0",
-    "recompose": "^0.30.0"
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@babel/core": "^7.9.0",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.1.0",
@@ -99,6 +91,8 @@
     "@testing-library/react": "^10.0.2",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.12",
+    "@types/react-responsive": "^8.0.2",
+    "@types/recompose": "^0.30.7",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
@@ -107,6 +101,7 @@
     "colors": "^1.4.0",
     "cross-env": "^7.0.2",
     "d": "^1.0.1",
+    "faker": "^4.1.0",
     "husky": "^4.2.5",
     "jest": "^24.9.0",
     "less-vars-to-js": "^1.3.0",
@@ -115,6 +110,8 @@
     "prettier": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-responsive": "^8.1.0",
+    "recompose": "^0.30.0",
     "rollup": "^1.27.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.3.0",
